# src/types/auth.ts
@@ -16,3 +16,13 @@ export type LoginInput = {
     loginOrEmail: string;
     password: string;
 };
+
+export type LoginResponse = {
+    accessToken: string;
+};
+
+export type CurrentUser = {
+    email: string;
+    login: string;
+    userId: string;
+};
